--- a/wp-content/themes/nt-big-border/css/main-style.css
+++ b/wp-content/themes/nt-big-border/css/main-style.css
@@ -4059,3 +4059,26 @@ a:hover .lnk-icon-right {
     -o-transform: translateY(-25%);
     transform: translateY(-25%); }
 
+
+@media (min-width: 992px) {
+  .col-md-20 {
+    float: left;
+  }
+
+  .col-md-20 {
+    width: 20%;
+  }
+}
+
+.col-md-20 {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+
+.link-social-icon {
+  display: flex;
+  align-items: center;
+}
